--- a/public/books-ranking.html
+++ b/public/books-ranking.html
@@ -3,14 +3,14 @@
 <hr />
 <ol><LI><h3>RAMAYAN</h3></LI>
 <hr />
-<img src="../ramayan.png" />
+<img src="./assets/images/ramayan.png" />
 <p>This is my favourite book.<br >it reallly keeps me inspiring and make me focus on my dreams.</p>
 <LI></LO><h3>MAHBHARAT</h3></LI>
 <hr /> 
-<img src="../mahabarat.png" />
+<img src="./assets/images/mahabarat.png" />
 <p>the most thought provoking book.<br >scenarios in this book are really a great lessson to the human lives.</p>
 <LI><h3>BHAGVATGEETA</h3></LI>
 <hr />
-<img src="../bhagvatgeeta.png" />
+<img src="./assets/images/bhagvatgeeta.png" />
 <p>this book itself is a direct talk to lord krishna.<br >it shows the purpose of the being in this land as a human.</p>
 </OL>
